# risk-manager

./: .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  GEMINI.md  README.md  audit_report.md  docker-compose.observability.yml  fix_mypy.py  markdownlint-ci.json  pyproject.toml  requirements.txt
.claude/commands/: babysit.md  deliver-wi.md  new-adr.md  new-prd.md  phase-review.md  repo-status.md  run-drift.md
.cursor/: worktrees.json
.cursor/rules/: agent-relay.mdc
.cursor/skills/: README.md  new-adr  new-prd  new-prd.md  phase-review-SKILL.md  run-drift.md
.gemini/: styleguide.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/agents/: README.md  coding.agent.md  drift-monitor.agent.md  issue-planner.agent.md  pm.agent.md  prd-spec.agent.md  review.agent.md  risk-methodology-spec.agent.md
.github/instructions/: backend.instructions.md  docs.instructions.md  ui.instructions.md
.github/skills/: README.md
.github/workflows/: ci.yml  drift-monitor.yml  markdown.yml  yaml.yml
agent_runtime/: README.md  __init__.py  __main__.py  backend_type.py  git_env.py  handoff_bundle.py  manual_supervisor_workflow.md
agent_runtime/config/: README.md  __init__.py  defaults.py  settings.py
alterraflow/: README.md  pyproject.toml
alterraflow/alterraflow/: backend_type.py  handoff_bundle.py
alterraflow/alterraflow/config/: defaults.py  settings.py
alterraflow/alterraflow/drift/: architecture_boundaries.py  canon_lineage.py  dependency_hygiene.py  drift_suite.py  instruction_surfaces.py  module_dashboard_freshness.py  reference_integrity.py  surface_liveness.py
alterraflow/alterraflow/notifications/: slack.py
alterraflow/alterraflow/orchestrator/: execution.py  github_sync.py  graph.py  langgraph_graph.py  parallel_dispatch.py  post_merge_hooks.py  pr_publication.py  state.py  supervisor.py  transitions.py  work_item_state.py  worktree_manager.py
alterraflow/alterraflow/runners/: _outcome_parsing.py  anthropic_backend.py  coding_runner.py  contracts.py  dispatch.py  drift_monitor_runner.py  issue_planner_runner.py  openai_backend.py  pm_runner.py  prompt_loader.py  registry.py  review_backend.py  review_runner.py  spec_backend.py  spec_runner.py
alterraflow/alterraflow/storage/: __init__.py  langgraph_checkpointer.py
alterraflow/alterraflow/telemetry/: __init__.py  audit.py  metrics.py  setup.py  spans.py
alterraflow/alterraflow/tests/: test_agent_outcome_scores.py  test_anthropic_backend.py  test_autonomous_loop.py  test_coding_runner.py  test_handoff_bundle.py  test_issue_planner_runner.py  test_langgraph_readiness.py  test_notifications.py  test_openai_backend.py  test_outcome_parsing.py  test_parallel_dispatch.py  test_pm_runner.py  test_post_merge_hooks.py  test_pr_publication.py  test_review_runner.py  test_spec_runner.py  test_supervisor_loop.py  test_transitions.py  test_work_item_state.py  test_worktree_manager.py
alterraflow/tests/unit/: test_architecture_boundaries.py  test_backlog_materialization.py  test_canon_lineage.py  test_dependency_hygiene.py  test_drift_suite.py  test_instruction_surfaces.py  test_module_dashboard_freshness.py  test_reference_integrity.py  test_registry_alignment.py  test_settings.py  test_surface_liveness.py
docs/: 00_tom_overview.md  01_design_principles.md  01_mission_and_design_principles.md  02_ownership_model.md  03_glossary.md  04_risk_manager_operating_model.md  05_walker_charters.md  06_prd_authoring_standard.md
docs/adr/: README.md  (+4 more)
fixtures/: README.md
presentation/: 01-intro-and-objectives.md  02-run-the-bank.md  03-change-the-bank.md  04-risk-analytics-prd-and-references.md  build-deck.sh  deck.md
prompts/: README.md
risk_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: invoke.py  outcome_report.py  render_module_dashboard.py  run_daily_risk_investigation.py  score_run.py  work_items_validate.py
skills/: README.md
src/: README.md  __init__.py
tests/: README.md  __init__.py  conftest.py
work_items/: README.md  READY_CRITERIA.md
(+384 files in other folders)
