[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-manager"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0,<3.0"]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.9",
    "mypy",
]
compute = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pyarrow==23.0.1",
    "duckdb==1.5.1",
    "statsmodels==0.14.6",
    "pandas==3.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"

[tool.setuptools.packages.find]
include = ["src*"]
