[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-manager"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0,<3.0", "pydantic-settings>=2.0,<3.0"]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.25,<5.0",
    "pytest==9.0.2",
    "ruff==0.15.9",
    "mypy",
]
agent = [
    "langgraph>=0.3,<1.0",
]
telemetry = [
    "opentelemetry-api>=1.40,<2",
    "opentelemetry-sdk>=1.40,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.40,<2",
    "opentelemetry-exporter-prometheus>=0.61b0,<1",
    "structlog>=25,<26",
]
sdk = [
    "openai>=1.0,<2.0",
    "anthropic>=0.40,<1.0",
]
compute = [
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pyarrow==23.0.1",
    "duckdb==1.5.1",
    "statsmodels==0.14.6",
    "pandas==3.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests", "agent_runtime/tests"]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Optional telemetry and agent extras — not installed in the default dev environment.
# All imports are guarded by try/except ImportError so runtime behaviour is
# unaffected when these packages are absent.
[[tool.mypy.overrides]]
module = ["opentelemetry.*", "structlog", "langgraph.*", "langchain_core.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["src*", "agent_runtime*"]
