[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alterraflow"
version = "0.1.0"
description = "Alterraflow orchestration framework."
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "pyyaml",
]

[project.optional-dependencies]
agent = [
    "langgraph",
    "langchain-core",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["alterraflow"]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
